<resources>
    <string name="app_name">Metroid</string>
    <string name="source">Origin</string>
    <string name="destination">Destination</string>
    <string name="remember">Remember</string>
    <string name="go">Go</string>
    <string name="alerts">Alerts</string>
    <string name="lets_go">LETS GO!</string>
    <string name="welcome">Welcome to Metroid</string>
    <string name="welcome_fragment">WelcomeFragment</string>
    <string name="source_button_description">searches for possible sources</string>
    <string name="destination_button_description">searches for possible destination</string>
    <string name="title_activity_maps">Map</string>
    <string name="alert_image_description">image displayed for metro alerts</string>
    <string name="OK">OK</string>
    <string name="no_alerts">There are no Metro incidents at the moment.</string>
    <string name="alert_fragment">AlertFragment</string>
    <string name="no_source">no source entered</string>
    <string name="no_destination">no destination entered</string>
    <string name="no_network">no network connection</string>
    <string name="no_results">no results found</string>
    <string name="no_route">no possible Metro routes</string>
</resources>
